[misc] Switch from JRE 11 to JRE 8