@@ -25,6 +25,7 @@ import static com.authlete.cose.constants.COSEHeaderParameters.PARTIAL_IV;
 import static com.authlete.cose.constants.COSEHeaderParameters.X5CHAIN;
 import java.io.IOException;
 import java.security.cert.X509Certificate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import com.authlete.cbor.CBORByteArray;
@@ -426,7 +427,7 @@ public class COSEProtectedHeader extends CBORByteArray
     {
         if (map == null)
         {
-            map = Map.of();
+            map = Collections.emptyMap();
         }
 
         // Convert the Java map into a CBOR map.
